# kuwahara-arnold-imager

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: grid.h  grid.hpp  kuwahara.hpp  kuwahara_arnold.h  kuwahara_arnold.hpp  structure_tensor.hpp
maya/ae/: aiImagerOoAnisotropicKuwaharaTemplate.py  aiImagerOoKuwaharaTemplate.py
mtd/: ooKuwaharaArnoldImager.mtd
scripts/: build_and_install_releases.ps1  build_releases.ps1
src/: anisotropic_kuwahara_imager.cpp  classic_kuwahara_imager.cpp  isotrope_kuwahara_imager.cpp  kuwahara_imager.cpp  loader.cpp  simple_imager.cpp
